--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gatsby-starter-blog",
-  "description": "Starter Gatsby Blog",
+  "name": "dfmcphee.github.io",
+  "description": "Personal site and blog",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Dominic McPhee <dominic.mcphee@gmail.com>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
+    "url": "https://github.com/dfmcphee/dfmcphee.github.io/issues"
   },
   "dependencies": {
     "atob": "^2.0.3",
@@ -26,15 +26,13 @@
     "gatsby-source-filesystem": "^1.4.3",
     "gatsby-transformer-remark": "^1.7.1",
     "gatsby-transformer-sharp": "^1.6.1",
-    "lodash": "^4.15.0",
-    "react-instagram-embed": "^1.3.2",
-    "react-responsive-grid": "^0.3.3"
+    "lodash": "^4.15.0"
   },
   "devDependencies": {
     "gh-pages": "^0.12.0",
     "prettier": "^1.5.3"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://dfmcphee.com",
   "keywords": [
     "gatsby"
   ],
@@ -42,7 +40,7 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/dfmcphee/dfmcphee.github.io.git"
   },
   "scripts": {
     "dev": "gatsby develop",
@@ -52,6 +50,7 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "deploy": "gatsby build && gh-pages -d public --branch master",
-    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
+    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js",
+    "purge-cache": "babel-node ./scripts/purge-cache.js"
   }
 }
